# renderEngine

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  app.sln  build.sh  run.sh
.github/workflows/: cmake-single-platform.yml
Dependencies/glm/include/glm/ext/: matrix_transform.inl
openglFirstApp/: openglFirstApp.vcxproj  openglFirstApp.vcxproj.filters
openglFirstApp/shader/: ComputeShader.shader  FragmentShader.shader  VertexShader.shader
openglFirstApp/src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  Debug.h  Global.cpp  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  objLoader.cpp  objLoader.h  object.cpp  object.h  shader.h
shader/: ComputeShader2.shader  FragmentShader.shader  GeometryShader.shader  fragment.shader  vertex.shader
src/: .#InputManager.cpp  Application.cpp  Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  Debug.h  Global.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  application.cpp  buffer.cpp  buffer.hpp  bufferLayout.cpp  bufferLayout.hpp  debug.cpp  debug.hpp  mesh.cpp  mesh.hpp  mesh_parser.hpp  objLoader.cpp  objLoader.h  scene.cpp  scene.hpp  (+7 more)
src/mesh_parser/: obj_parser.cpp  obj_parser.hpp
